--- a/labs/lab06/presentation/os2--lab06--presentation.qmd
+++ b/labs/lab06/presentation/os2--lab06--presentation.qmd
@@ -3,10 +3,10 @@
 
 ## Author
 author:
-  name: Дмитрий Сергеевич Кулябов
+  name: Гелдиев Ыхлас
   degrees: DSc
   orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
+  email: 1032249184@pfur.ru
   affiliation:
     - name: Российский университет дружбы народов
       country: Российская Федерация
@@ -14,10 +14,10 @@ author:
       city: Москва
       address: ул. Миклухо-Маклая, д. 6
 ## Title
-title: Структура научной презентации
-subtitle: Простейший вариант
+title: Лабораторная работа №6
+subtitle: Управление процессами
 license: CC BY
-date: 1970-01-01
+date: 2025-10-11
 ## Generic options
 lang: ru-RU
 crossref:
@@ -26,8 +26,13 @@ crossref:
   lol-title: Листинги
 ## Formats
 format:
-### Pdf output format
+  ### Pdf output format
   beamer:
+    include-in-header:
+      text: |
+        \usepackage{fontspec}
+        \setmainfont{Noto Serif}
+        \setsansfont{Noto Sans}
     toc: true
     toc-title: Содержание
     number-sections: true
@@ -38,10 +43,10 @@ format:
     section-titles: true
     theme: metropolis
     themeoptions: progressbar=frametitle,sectionpage=progressbar,numbering=fraction
-#### Language
+    #### Language
     babel-lang: russian
     babel-otherlangs: english
-### Html output
+  ### Html output
   revealjs:
     transition: slide
     margin: 0.2
@@ -55,178 +60,253 @@ format:
 
 ## Докладчик
 
-:::::::::::::: {.columns align=center}
-::: {.column width="70%"}
+- Гелдиев Ыхлас
+- студент
+- Российский университет дружбы народов им. П. Лумумбы
+- [1032249184@pfur.ru](mailto:1032249184@pfur.ru)
+- <https://geldiyevy.github.io/ru/>
 
-  * Кулябов Дмитрий Сергеевич
-  * д.ф.-м.н., профессор
-  * профессор кафедры теории вероятностей и кибербезопасности
-  * Российский университет дружбы народов им. П. Лумумбы
-  * [kulyabov-ds@rudn.ru](mailto:kulyabov-ds@rudn.ru)
-  * <https://yamadharma.github.io/ru/>
+## Цель работы
 
-:::
-::: {.column width="30%"}
+Получить навыки управления процессами операционной системы.
 
-![](./image/kulyabov.jpg)
+## Задание
 
-:::
-::::::::::::::
+1. Продемонстрируйте навыки управления заданиями операционной системы (см. раздел 6.4.1).
 
-# Вводная часть
+2. Продемонстрируйте навыки управления процессами операционной системы (см. раздел 6.4.2).
+3. Выполните задания для самостоятельной работы (см. раздел 6.5)
 
-## Актуальность
+# Выполнение лабораторной работы
 
-- Важно донести результаты своих исследований до окружающих
-- Научная презентация --- рабочий инструмент исследователя
-- Необходимо создавать презентацию быстро
-- Желательна минимизация усилий для создания презентации
+## Управление заданиями
 
-## Объект и предмет исследования
+## Получите полномочия администратора
 
-- Презентация как текст
-- Программное обеспечение для создания презентаций
-- Входные и выходные форматы презентаций
+`su -`
 
-## Цели и задачи
+![`su -`](image/1.png)
 
-- Создать шаблон презентации в Markdown
-- Описать алгоритм создания выходных форматов презентаций
+## Введите следующие команды: ([рис. @fig-001])
 
-## Материалы и методы
+`sleep 3600 &`
+`dd if=/dev/zero of=/dev/null &`
+`sleep 7200`
 
-- Процессор `pandoc` для входного формата Markdown
-- Результирующие форматы
-	- `pdf`
-	- `html`
-- Автоматизация процесса создания: `Makefile`
+## Поскольку вы запустили последнюю команду без & после неё, у вас есть 2 часа, прежде
 
-# Создание презентации
+чем вы снова получите контроль над оболочкой. Введите `Ctrl + z` , чтобы остановить
+процесс. ([рис. @fig-001])
 
-## Процессор `pandoc`
+## Введите ([рис. @fig-001])
 
-- Pandoc: преобразователь текстовых файлов
-- Сайт: <https://pandoc.org/>
-- Репозиторий: <https://github.com/jgm/pandoc>
+`jobs`
+Вы увидите три задания, которые вы только что запустили. Первые два имеют состояние `Running`, а последнее задание в настоящее время находится в состоянии
+`Stopped`.
 
-## Формат `pdf`
+## Для продолжения выполнения задания 3 в фоновом режиме введите ([рис. @fig-001])
 
-- Использование LaTeX
-- Пакет для презентации: [beamer](https://ctan.org/pkg/beamer)
-- Тема оформления: `metropolis`
+`bg 3`
+С помощью команды `jobs` посмотрите изменения в статусе заданий. ([рис. @fig-001])
 
-## Код для формата `pdf`
+## Для перемещения задания 1 на передний план введите ([рис. @fig-001])
 
-```yaml
-slide_level: 2
-aspectratio: 169
-section-titles: true
-theme: metropolis
-```
+`fg 1`
 
-## Формат `html`
+## Введите `Ctrl + c` , чтобы отменить задание 1. С помощью команды jobs посмотрите изменения в статусе заданий. ([рис. @fig-001])
 
-- Используется фреймворк [reveal.js](https://revealjs.com/)
-- Используется [тема](https://revealjs.com/themes/) `beige`
+## Проделайте то же самое для отмены заданий 2 и 3. ([рис. @fig-001])
 
-## Код для формата `html`
+![Делаю 2, 3, 4, 5, 6, 7, 8](image/2.png){#fig-001}
 
-- Тема задаётся в файле `Makefile`
+## Откройте второй терминал и под учётной записью своего пользователя введите в нём: ([рис. @fig-003])
 
-```make
-REVEALJS_THEME = beige
-```
-# Результаты
+`dd if=/dev/zero of=/dev/null &`
 
-## Получающиеся форматы
+## Введите exit, чтобы закрыть второй терминал. ([рис. @fig-003])
 
-- Полученный `pdf`-файл можно демонстрировать в любой программе просмотра `pdf`
-- Полученный `html`-файл содержит в себе все ресурсы: изображения, css, скрипты
+![`dd if=/dev/zero of=/dev/null && exit`](image/3.png){#fig-003}
 
-# Элементы презентации
+## На другом терминале под учётной записью своего пользователя запустите
 
-## Актуальность
+    `top`
+    Вы увидите, что задание dd всё ещё запущено. Для выхода из `top` используйте `q` .
 
-- Даёт понять, о чём пойдёт речь
-- Следует широко и кратко описать проблему
-- Мотивировать свое исследование
-- Сформулировать цели и задачи
-- Возможна формулировка ожидаемых результатов
+    ![`top`](image/top1.png)
 
-## Цели и задачи
+## Вновь запустите `top` и в нём используйте k , чтобы убить задание `dd`. После этого
 
-- Не формулируйте более 1--2 целей исследования
+    выйдите из `top`.
 
-## Материалы и методы
+    ![`top2`](image/top2.png)
 
-- Представляйте данные качественно
-- Количественно, только если крайне необходимо
-- Излишние детали не нужны
+## Управление процессами
 
-## Содержание исследования
+## Получите полномочия администратора ([рис. @fig-004])
 
-- Предлагаемое решение задач исследования с обоснованием
-- Основные этапы работы
+`su -`
 
-## Результаты
+## Введите следующие команды: ([рис. @fig-004])
 
-- Не нужны все результаты
-- Необходимы логические связки между слайдами
-- Необходимо показать понимание материала
+`dd if=/dev/zero of=/dev/null &`
+`dd if=/dev/zero of=/dev/null &`
+`dd if=/dev/zero of=/dev/null &`
 
+## Введите ([рис. @fig-004])
 
-## Итоговый слайд
+`ps aux | grep dd`
+Это показывает все строки, в которых есть буквы dd. Запущенные процессы dd идут
+последними.
 
-- Запоминается последняя фраза. © Штирлиц
-- Главное сообщение, которое вы хотите донести до слушателей
-- Избегайте использовать последний слайд вида *Спасибо за внимание*
+## Используйте PID одного из процессов dd, чтобы изменить приоритет. Используйте ([рис. @fig-004])
 
-# Рекомендую
+`renice -n 5 <PID>`
 
-## Принцип 10/20/30
+## Введите ([рис. @fig-004])
 
-  - 10 слайдов
-  - 20 минут на доклад
-  - 30 кегль шрифта
+`ps fax | grep -B5 dd`
+Параметр -B5 показывает соответствующие запросу строки, включая пять строк до
+этого. Поскольку `ps fax` показывает иерархию отношений между процессами, вы
+также увидите оболочку, из которой были запущены все процессы `dd`, и её `PID`.
 
-## Связь слайдов
+![Делаю 1, 2, 3, 4, 5](image/4.png){#fig-004}
 
-::: incremental
+## Найдите PID корневой оболочки, из которой были запущены процессы dd, и введите
 
-- Один слайд --- одна мысль
-- Нельзя ссылаться на объекты, находящиеся на предыдущих слайдах (например, на формулы)
-- Каждый слайд должен иметь заголовок
+`kill -9 <PID>`
+(заменив <PID> на значение PID оболочки). Вы увидите, что ваша корневая оболочка
+закрылась, а вместе с ней и все процессы dd. Остановка родительского процесса —
+простой и удобный способ остановить все его дочерние процессы.
 
-:::
+![`kill -9 3532`](image/kill1.png)
 
-## Количество сущностей
+# Самостоятельная работа
 
-::: incremental
+# Задание 1
 
-- Человек может одновременно помнить $7 \pm 2$ элемента
-- При размещении информации на слайде старайтесь чтобы в сумме слайд содержал не более 5 элементов
-- Можно группировать элементы так, чтобы визуально было не более 5 групп
+## Запустите команду
 
-:::
+`dd if=/dev/zero of=/dev/null`
+трижды как фоновое задание. ([рис. @fig-005])
 
-## Общие рекомендации
+## Увеличьте приоритет одной из этих команд, используя значение приоритета −5. ([рис. @fig-005])
 
-::: incremental
+## Измените приоритет того же процесса ещё раз, но используйте на этот раз значение −15. ([рис. @fig-005])
 
-- На слайд выносится та информация, которая без зрительной опоры воспринимается хуже
-- Слайды должны дополнять или обобщать содержание выступления или его частей, а не дублировать его
-- Информация на слайдах должна быть изложена кратко, чётко и хорошо структурирована
-- Слайд не должен быть перегружен графическими изображениями и текстом
-- Не злоупотребляйте анимацией и переходами
+В чём разница?
 
-:::
+- Чем ниже значение приоритета, тем приоритетнее задача
 
-## Представление данных
+## Завершите все процессы `dd`, которые вы запустили ([рис. @fig-005])
 
-::: incremental
+![Задание 1](image/mission1.png){#fig-005}
 
-- Лучше представить в виде схемы
-- Менее оптимально представить в виде рисунка, графика, таблицы
-- Текст используется, если все предыдущие способы отображения информации не подошли
+# Задание 2
 
-:::
+## Запустите программу yes в фоновом режиме с подавлением потока вывода. ([рис. @fig-006])
+
+2. Запустите программу yes на переднем плане с подавлением потока вывода. Приостановите выполнение программы. Заново запустите программу yes с теми же параметрами, затем завершите её выполнение. ([рис. @fig-006])
+
+## Запустите программу yes на переднем плане без подавления потока вывода. Приостановите выполнение программы. Заново запустите программу yes с теми же параметрами, затем завершите её выполнение. ([рис. @fig-006])
+
+![Задание 2.1](image/mission2.1.png){#fig-006}
+
+## Проверьте состояния заданий, воспользовавшись командой jobs. ([рис. @fig-007])
+
+## Переведите процесс, который у вас выполняется в фоновом режиме, на передний план, затем остановите его. ([рис. @fig-007])
+
+![Задание 2.2](image/mission2.2.png){#fig-007}
+
+## Переведите любой ваш процесс с подавлением потока вывода в фоновый режим. ([рис. @fig-008])
+
+Проверьте состояния заданий, воспользовавшись командой jobs. Обратите внимание, что процесс стал выполняющимся (Running) в фоновом режиме. ([рис. @fig-008])
+
+![Задание 2.3](image/mission2.3.png){#fig-008}
+
+## Запустите процесс в фоновом режиме таким образом, чтобы он продолжил свою работу даже после отключения от терминала.
+
+![Задание 2.4](image/mission2.4.png)
+
+## Закройте окно и заново запустите консоль. Убедитесь, что процесс продолжил свою работу.
+
+![Задание 2.5](image/mission2.5.png)
+
+## Получите информацию о запущенных в операционной системе процессах с помощью утилиты top.
+
+![Задание 2.6](image/mission2.6.png)
+
+## Запустите ещё три программы yes в фоновом режиме с подавлением потока вывода. ([рис. @fig-009])
+
+Убейте два процесса: для одного используйте его PID, а для другого — его идентификатор конкретного задания. ([рис. @fig-009])
+
+![Задание 2.7](image/mission2.7.png){#fig-009}
+
+## Попробуйте послать сигнал 1 (SIGHUP) процессу, запущенному с помощью nohup, и обычному процессу.
+
+![Задание 2.8](image/mission2.9.png)
+
+## Запустите ещё несколько программ yes в фоновом режиме с подавлением потока вывода.
+
+![Задание 2.9](image/mission2.8.png)
+
+## Завершите их работу одновременно, используя команду killall.
+
+![Задание 2.10](image/mission2.10.png)
+
+## Запустите программу yes в фоновом режиме с подавлением потока вывода. Используя утилиту nice, запустите программу yes с теми же параметрами и с приоритетом, большим на 5. Сравните абсолютные и относительные приоритеты у этих двух процессов.
+
+![Задание 2.11](image/mission2.11.png)
+
+##
+
+![`top`](image/mission2.12.png)
+
+## Используя утилиту renice, измените приоритет у одного из потоков yes таким образом, чтобы у обоих потоков приоритеты были равны.
+
+![`renice`](image/mission2.13.png)
+
+# Контрольные вопросы
+
+## Какая команда даёт обзор всех текущих заданий оболочки?
+
+- jobs
+
+## Как остановить текущее задание оболочки, чтобы продолжить его выполнение в фоновом режиме?
+
+- Ctrl‑Z → bg
+
+## Какую комбинацию клавиш можно использовать для отмены текущего задания оболочки?
+
+- Ctrl‑C
+
+## Необходимо отменить одно из начатых заданий. Доступ к оболочке, в которой в данный момент работает пользователь, невозможен. Что можно сделать, чтобы отменить задание?
+
+- kill -9 <PID> (узнать PID через ps/pgrep из другой сессии)
+
+## Какая команда используется для отображения отношений между родительскими и дочерними процессами?
+
+- pstree или ps -ejH
+
+## Какая команда позволит изменить приоритет процесса с идентификатором 1234 на более высокий?
+
+- renice -n -<value> 1234
+
+## В системе в настоящее время запущено 20 процессов dd. Как проще всего остановить их все сразу?
+
+- pkill -f '^dd$' или killall dd
+
+## Какая команда позволяет остановить команду с именем mycommand?
+
+- pkill -f '^mycommand$'
+
+## Какая команда используется в top, чтобы убить процесс?
+
+- В top нажать k, ввести PID и сигнал (обычно 9)
+
+## Как запустить команду с достаточно высоким приоритетом, не рискуя, что не хватит ресурсов для других процессов?
+
+- nice -n -<value> command (отрицательное значение nice)
+
+## Выводы
+
+Я получил навыки управления процессами операционной системы.
