--- a/labs/lab07/presentation/os2--lab07--presentation.qmd
+++ b/labs/lab07/presentation/os2--lab07--presentation.qmd
@@ -3,10 +3,10 @@
 
 ## Author
 author:
-  name: Дмитрий Сергеевич Кулябов
+  name: Гелдиев Ыхлас
   degrees: DSc
   orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
+  email: 1032249184@pfur.ru
   affiliation:
     - name: Российский университет дружбы народов
       country: Российская Федерация
@@ -14,10 +14,10 @@ author:
       city: Москва
       address: ул. Миклухо-Маклая, д. 6
 ## Title
-title: Структура научной презентации
-subtitle: Простейший вариант
+title: "Лабораторная работа № 7"
+subtitle: "Управление журналами событий в системе"
 license: CC BY
-date: 1970-01-01
+date: 2025-10-18
 ## Generic options
 lang: ru-RU
 crossref:
@@ -26,8 +26,13 @@ crossref:
   lol-title: Листинги
 ## Formats
 format:
-### Pdf output format
+  ### Pdf output format
   beamer:
+    include-in-header:
+      text: |
+        \usepackage{fontspec}
+        \setmainfont{Noto Serif}
+        \setsansfont{Noto Sans}
     toc: true
     toc-title: Содержание
     number-sections: true
@@ -38,10 +43,10 @@ format:
     section-titles: true
     theme: metropolis
     themeoptions: progressbar=frametitle,sectionpage=progressbar,numbering=fraction
-#### Language
+    #### Language
     babel-lang: russian
     babel-otherlangs: english
-### Html output
+  ### Html output
   revealjs:
     transition: slide
     margin: 0.2
@@ -55,178 +60,242 @@ format:
 
 ## Докладчик
 
-:::::::::::::: {.columns align=center}
-::: {.column width="70%"}
-
-  * Кулябов Дмитрий Сергеевич
-  * д.ф.-м.н., профессор
-  * профессор кафедры теории вероятностей и кибербезопасности
-  * Российский университет дружбы народов им. П. Лумумбы
-  * [kulyabov-ds@rudn.ru](mailto:kulyabov-ds@rudn.ru)
-  * <https://yamadharma.github.io/ru/>
-
-:::
-::: {.column width="30%"}
-
-![](./image/kulyabov.jpg)
-
-:::
-::::::::::::::
+- Гелдиев Ыхлас
+- студент
+- Российский университет дружбы народов им. П. Лумумбы
+- [1032249184@pfur.ru](mailto:1032249184@pfur.ru)
+- <https://geldiyevy.github.io/ru/>
 
 # Вводная часть
 
-## Актуальность
+## Цель работы
 
-- Важно донести результаты своих исследований до окружающих
-- Научная презентация --- рабочий инструмент исследователя
-- Необходимо создавать презентацию быстро
-- Желательна минимизация усилий для создания презентации
+Получить навыки работы с журналами мониторинга различных событий в системе.
 
-## Объект и предмет исследования
+## Задание
 
-- Презентация как текст
-- Программное обеспечение для создания презентаций
-- Входные и выходные форматы презентаций
+1. Продемонстрируйте навыки работы с журналом мониторинга событий в реальном времени (см. раздел 7.4.1).
 
-## Цели и задачи
+2. Продемонстрируйте навыки создания и настройки отдельного файла конфигурации мониторинга отслеживания событий веб-службы (см. раздел 7.4.2).
 
-- Создать шаблон презентации в Markdown
-- Описать алгоритм создания выходных форматов презентаций
+3. Продемонстрируйте навыки работы с journalctl (см. раздел 7.4.3).
 
-## Материалы и методы
+4. Продемонстрируйте навыки работы с journald (см. раздел 7.4.4)
 
-- Процессор `pandoc` для входного формата Markdown
-- Результирующие форматы
-	- `pdf`
-	- `html`
-- Автоматизация процесса создания: `Makefile`
+# Выполнение лабораторной работы
 
-# Создание презентации
+# Мониторинг журнала системных событий в реальном времени
 
-## Процессор `pandoc`
+## Запустите три вкладки терминала и в каждом из них получите полномочия администратора: ([рис. @fig-001])
 
-- Pandoc: преобразователь текстовых файлов
-- Сайт: <https://pandoc.org/>
-- Репозиторий: <https://github.com/jgm/pandoc>
+`su -`
 
-## Формат `pdf`
+## На второй вкладке терминала запустите мониторинг системных событий в реальном времени: ([рис. @fig-001])
 
-- Использование LaTeX
-- Пакет для презентации: [beamer](https://ctan.org/pkg/beamer)
-- Тема оформления: `metropolis`
+`tail -f /var/log/messages`
 
-## Код для формата `pdf`
+![1](image/1.png){#fig-001}
 
-```yaml
-slide_level: 2
-aspectratio: 169
-section-titles: true
-theme: metropolis
-```
+## В третьей вкладке терминала вернитесь к учётной записи своего пользователя (достаточно нажать Ctrl + d ) и попробуйте получить полномочия администратора, но введите неправильный пароль. Обратите внимание, что во второй вкладке терминала с мониторингом событий или ничего не отобразится, или появится сообщение `«FAILED SU (to root) username ...»`. Отображаемые на экране сообщения также фиксируются в файле `/var/log/messages`.
 
-## Формат `html`
+![2](image/2.png)
 
-- Используется фреймворк [reveal.js](https://revealjs.com/)
-- Используется [тема](https://revealjs.com/themes/) `beige`
+## В третьей вкладке терминала из оболочки пользователя введите
 
-## Код для формата `html`
+`logger hello`
+Во второй вкладке терминала с мониторингом событий вы увидите сообщение, которое также будет зафиксировано в файле /var/log/messages.
 
-- Тема задаётся в файле `Makefile`
+![3](image/3.png)
 
-```make
-REVEALJS_THEME = beige
-```
-# Результаты
+## Во второй вкладке терминала с мониторингом остановите трассировку файла сообщений мониторинга реального времени, используя Ctrl + c . Затем запустите мониторинг сообщений безопасности (последние 20 строк соответствующего файла логов):
 
-## Получающиеся форматы
+`tail -n 20 /var/log/secure`
+Вы увидите сообщения, которые ранее были зафиксированы во время ошибки авторизации при вводе команды su.
 
-- Полученный `pdf`-файл можно демонстрировать в любой программе просмотра `pdf`
-- Полученный `html`-файл содержит в себе все ресурсы: изображения, css, скрипты
+![4](image/4.png)
 
-# Элементы презентации
+# Изменение правил rsyslog.conf
 
-## Актуальность
+## В первой вкладке терминала установите Apache, если он не был ранее инсталлирован:
 
-- Даёт понять, о чём пойдёт речь
-- Следует широко и кратко описать проблему
-- Мотивировать свое исследование
-- Сформулировать цели и задачи
-- Возможна формулировка ожидаемых результатов
+`dnf -y install httpd`
 
-## Цели и задачи
+![5](image/5.png)
 
-- Не формулируйте более 1--2 целей исследования
+## После окончания процесса установки запустите веб-службу:
 
-## Материалы и методы
+`systemctl start httpd`
+`systemctl enable httpd`
 
-- Представляйте данные качественно
-- Количественно, только если крайне необходимо
-- Излишние детали не нужны
+![6](image/6.png)
 
-## Содержание исследования
+## Во второй вкладке терминала посмотрите журнал сообщений об ошибках веб-службы:
 
-- Предлагаемое решение задач исследования с обоснованием
-- Основные этапы работы
+`tail -f /var/log/httpd/error_log`
+Чтобы закрыть трассировку файла журнала, используйте Ctrl + c .
 
-## Результаты
+![7](image/7.png)
 
-- Не нужны все результаты
-- Необходимы логические связки между слайдами
-- Необходимо показать понимание материала
+## В третьей вкладке терминала получите полномочия администратора и в файле конфигурации /etc/httpd/conf/httpd.conf в конце добавьте следующую строку:
 
+`ErrorLog syslog:local1`
+Здесь local0 — local7 — это «настраиваемые» средства (объекты), которые syslog предоставляет пользователю для регистрации событий приложения в системном журнале.
 
-## Итоговый слайд
+![8](image/8.png)
 
-- Запоминается последняя фраза. © Штирлиц
-- Главное сообщение, которое вы хотите донести до слушателей
-- Избегайте использовать последний слайд вида *Спасибо за внимание*
+## В каталоге /etc/rsyslog.d создайте файл мониторинга событий веб-службы:
 
-# Рекомендую
+`cd /etc/rsyslog.d`
+`touch httpd.conf`
 
-## Принцип 10/20/30
+![9](image/9.png)
 
-  - 10 слайдов
-  - 20 минут на доклад
-  - 30 кегль шрифта
+## Открыв его на редактирование, пропишите в нём
 
-## Связь слайдов
+`local1.\* -/var/log/httpd-error.log`
+Эта строка позволит отправлять все сообщения, получаемые для объекта local1 (который теперь используется службой httpd), в файл /var/log/httpd-error.log.
 
-::: incremental
+![10](image/10.png)
 
-- Один слайд --- одна мысль
-- Нельзя ссылаться на объекты, находящиеся на предыдущих слайдах (например, на формулы)
-- Каждый слайд должен иметь заголовок
+## Перейдите в первую вкладку терминала и перезагрузите конфигурацию rsyslogd и веб-службу:
 
-:::
+`systemctl restart rsyslog.service`
+`systemctl restart httpd`
+Все сообщения об ошибках веб-службы теперь будут записаны в файл /var/log/httpd-error.log, что можно наблюдать или в режиме реального времени, используя команду tail с соответствующими параметрами, или непосредственно просматривая указанный файл.
 
-## Количество сущностей
+![11](image/11.png)
 
-::: incremental
+## В третьей вкладке терминала создайте отдельный файл конфигурации для мониторинга отладочной информации:
 
-- Человек может одновременно помнить $7 \pm 2$ элемента
-- При размещении информации на слайде старайтесь чтобы в сумме слайд содержал не более 5 элементов
-- Можно группировать элементы так, чтобы визуально было не более 5 групп
+`cd /etc/rsyslog.d`
+`touch debug.conf`
 
-:::
+В этом же терминале введите
+`echo "\*.debug /var/log/messages-debug" > /etc/rsyslog.d/debug.conf`
 
-## Общие рекомендации
+![12](image/12.png)
 
-::: incremental
+## В первой вкладке терминала снова перезапустите rsyslogd:
 
-- На слайд выносится та информация, которая без зрительной опоры воспринимается хуже
-- Слайды должны дополнять или обобщать содержание выступления или его частей, а не дублировать его
-- Информация на слайдах должна быть изложена кратко, чётко и хорошо структурирована
-- Слайд не должен быть перегружен графическими изображениями и текстом
-- Не злоупотребляйте анимацией и переходами
+`systemctl restart rsyslog.service`
 
-:::
+![13](image/13.png)
 
-## Представление данных
+## Во второй вкладке терминала запустите мониторинг отладочной информации:
 
-::: incremental
+`tail -f /var/log/messages-debug`
 
-- Лучше представить в виде схемы
-- Менее оптимально представить в виде рисунка, графика, таблицы
-- Текст используется, если все предыдущие способы отображения информации не подошли
+![14](image/14.png)
 
-:::
+## В третьей вкладке терминала введите:
+
+`logger -p daemon.debug "Daemon Debug Message"`
+
+![15](image/15.png)
+
+## В терминале с мониторингом посмотрите сообщение отладки. Чтобы закрыть трассировку файла журнала, используйте `Ctrl + c`.
+
+![16](image/16.png)
+
+# Использование journalctl
+
+## Во второй вкладке терминала посмотрите содержимое журнала с событиями с момента последнего запуска системы:
+
+`journalctl`
+Для пролистывания журнала используйте или `Enter` (построчный просмотр), или пробел (постраничный просмотр). Для выхода из просмотра используйте q.
+
+![17](image/17.png)
+
+## Просмотр содержимого журнала без использования пейджера:
+
+`journalctl --no-pager`
+
+![18](image/18.png)
+
+## Режим просмотра журнала в реальном времени:
+
+`journalctl -f`
+Используйте Ctrl + c для прерывания просмотра.
+
+![19](image/19.png)
+
+## Для использования фильтрации просмотра конкретных параметров журнала введите
+
+`journalctl` и дважды нажмите клавишу `Tab` .
+
+![20](image/20.png)
+
+## Просмотрите события для UID0:
+
+`journalctl _UID=0`
+
+![21](image/21.png)
+
+## Для отображения последних 20 строк журнала введите
+
+`journalctl -n 20`
+
+![22](image/22.png)
+
+## Для просмотра только сообщений об ошибках введите
+
+`journalctl -p err`
+
+![23](image/23.png)
+
+## Если вы хотите просмотреть сообщения журнала, записанные за определённый период времени, вы можете использовать параметры `--since` и `--until`. Обе опции принимают параметр времени в формате `YYYY-MM-DD hh:mm:ss` Кроме того, вы можете использовать yesterday, today и tomorrow в качестве параметров.
+
+Например, для просмотра всех сообщений со вчерашнего дня введите
+`journalctl --since yesterday`
+
+![24](image/24.png)
+
+## Если вы хотите показать все сообщения с ошибкой приоритета, которые были зафиксированы со вчерашнего дня, то используйте
+
+`journalctl --since yesterday -p err`
+
+![25](image/25.png)
+
+## Если вам нужна детальная информация, то используйте
+
+`journalctl -o verbose`
+
+![26](image/26.png)
+
+## Для просмотра дополнительной информации о модуле sshd введите
+
+`journalctl _SYSTEMD_UNIT=sshd.service`
+
+![27](image/27.png)
+
+# Постоянный журнал journald
+
+## Запустите терминал и получите полномочия администратора.
+
+![28](image/28.png)
+
+## Создайте каталог для хранения записей журнала: ([рис. @fig-002])
+
+`mkdir -p /var/log/journal`
+
+## Скорректируйте права доступа для каталога /var/log/journal, чтобы journald смог
+
+записывать в него информацию: ([рис. @fig-002])
+`chown root:systemd-journal /var/log/journal`
+`chmod 2755 /var/log/journal`
+
+## Для принятия изменений необходимо или перезагрузить систему (перезапустить службу systemd-journald недостаточно), или использовать команду: ([рис. @fig-002])
+
+`killall -USR1 systemd-journald`
+
+![29](image/29.png){#fig-002}
+
+## Журнал systemd теперь постоянный. Если вы хотите видеть сообщения журнала с момента последней перезагрузки, используйте:
+
+`journalctl -b`
+
+![30](image/30.png)
+
+## Выводы
+
+Я получил навыки работы с журналами мониторинга различных событий в системе.
