--- a/labs/lab07/report/os2--lab07--report.qmd
+++ b/labs/lab07/report/os2--lab07--report.qmd
@@ -3,10 +3,10 @@
 
 ## Author
 author:
-  name: Дмитрий Сергеевич Кулябов
+  name: Гелдиев Ыхлас
   degrees: DSc
   orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
+  email: 1032249184@pfur.ru
   affiliation:
     - name: Российский университет дружбы народов
       country: Российская Федерация
@@ -14,8 +14,8 @@ author:
       city: Москва
       address: ул. Миклухо-Маклая, д. 6
 ## Title
-title: "Шаблон отчёта по лабораторной работе"
-subtitle: "Простейший вариант"
+title: "Лабораторная работа № 7"
+subtitle: "Управление журналами событий в системе"
 license: "CC BY"
 ## Generic options
 lang: ru-RU
@@ -34,7 +34,7 @@ bibliography:
 csl: _resources/csl/gost-r-7-0-5-2008-numeric.csl
 ## Formats
 format:
-### Pdf output format
+  ### Pdf output format
   pdf:
     toc: true
     number-sections: true
@@ -42,22 +42,22 @@ format:
     toc-depth: 2
     lof: true # List of figures
     lot: true # List of tables
-#### Document
+    #### Document
     documentclass: scrreprt
     papersize: a4
     fontsize: 12pt
     linestretch: 1.5
-#### Language
+    #### Language
     babel-lang: russian
     babel-otherlangs: english
-#### Biblatex
+    #### Biblatex
     cite-method: biblatex
     biblio-style: gost-numeric
     biblatexoptions:
       - backend=biber
       - langhook=extras
       - autolang=other*
-#### Misc options
+    #### Misc options
     csquotes: true
     indent: true
     header-includes: |
@@ -65,7 +65,7 @@ format:
       \usepackage{float}
       \floatplacement{figure}{H}
       \usepackage[math,RM={Scale=0.94},SS={Scale=0.94},SScon={Scale=0.94},TT={Scale=MatchLowercase,FakeStretch=0.9},DefaultFeatures={Ligatures=Common}]{plex-otf}
-### Docx output format
+  ### Docx output format
   docx:
     toc: true
     number-sections: true
@@ -74,44 +74,205 @@ format:
 
 # Цель работы
 
-Здесь приводится формулировка цели лабораторной работы. Формулировки цели для каждой лабораторной работы приведены в методических указаниях.
-
-Цель данного шаблона --- максимально упростить подготовку отчётов по лабораторным работам.  Модифицируя данный шаблон, студенты смогут без труда подготовить отчёт по лабораторным работам, а также познакомиться с основными возможностями разметки Markdown.
+Получить навыки работы с журналами мониторинга различных событий в системе.
 
 # Задание
 
-Здесь приводится описание задания в соответствии с рекомендациями методического пособия и выданным вариантом.
+1. Продемонстрируйте навыки работы с журналом мониторинга событий в реальном времени (см. раздел 7.4.1).
 
-# Теоретическое введение
+2. Продемонстрируйте навыки создания и настройки отдельного файла конфигурации мониторинга отслеживания событий веб-службы (см. раздел 7.4.2).
 
-Здесь описываются теоретические аспекты, связанные с выполнением работы.
+3. Продемонстрируйте навыки работы с journalctl (см. раздел 7.4.3).
 
-Например, в [табл. @tbl-std-dir] приведено краткое описание стандартных каталогов Unix.
-
-| Имя каталога | Описание каталога                                                                                                          |
-|--------------|----------------------------------------------------------------------------------------------------------------------------|
-| `/`          | Корневая директория, содержащая всю файловую                                                                               |
-| `/bin `      | Основные системные утилиты, необходимые как в однопользовательском режиме, так и при обычной работе всем пользователям     |
-| `/etc`       | Общесистемные конфигурационные файлы и файлы конфигурации установленных программ                                           |
-| `/home`      | Содержит домашние директории пользователей, которые, в свою очередь, содержат персональные настройки и данные пользователя |
-| `/media`     | Точки монтирования для сменных носителей                                                                                   |
-| `/root`      | Домашняя директория пользователя  `root`                                                                                   |
-| `/tmp`       | Временные файлы                                                                                                            |
-| `/usr`       | Вторичная иерархия для данных пользователя                                                                                 |
-
-: Описание некоторых каталогов файловой системы GNU Linux {#tbl-std-dir}
-
-Более подробно про Unix см. в [@tanenbaum_book_modern-os_ru; @robbins_book_bash_en; @zarrelli_book_mastering-bash_en; @newham_book_learning-bash_en].
+4. Продемонстрируйте навыки работы с journald (см. раздел 7.4.4)
 
 # Выполнение лабораторной работы
 
-Описываются проведённые действия, в качестве иллюстрации даётся ссылка на иллюстрацию ([рис. @fig-001]).
+## Мониторинг журнала системных событий в реальном времени
 
-![V Сольвеевский конгресс (1927) «Электроны и фотоны»](image/solvay.jpg){#fig-001 width=70%}
+1. Запустите три вкладки терминала и в каждом из них получите полномочия администратора: ([рис. @fig-001])
+   `su -`
+
+2. На второй вкладке терминала запустите мониторинг системных событий в реальном времени: ([рис. @fig-001])
+   `tail -f /var/log/messages`
+
+   ![1](image/1.png){#fig-001}
+
+3. В третьей вкладке терминала вернитесь к учётной записи своего пользователя (достаточно нажать Ctrl + d ) и попробуйте получить полномочия администратора, но введите неправильный пароль. Обратите внимание, что во второй вкладке терминала с мониторингом событий или ничего не отобразится, или появится сообщение `«FAILED SU (to root) username ...»`. Отображаемые на экране сообщения также фиксируются в файле `/var/log/messages`.
+
+![2](image/2.png)
+
+4. В третьей вкладке терминала из оболочки пользователя введите
+   `logger hello`
+   Во второй вкладке терминала с мониторингом событий вы увидите сообщение, которое также будет зафиксировано в файле /var/log/messages.
+
+   ![3](image/3.png)
+
+5. Во второй вкладке терминала с мониторингом остановите трассировку файла сообщений мониторинга реального времени, используя Ctrl + c . Затем запустите мониторинг сообщений безопасности (последние 20 строк соответствующего файла логов):
+   `tail -n 20 /var/log/secure`
+   Вы увидите сообщения, которые ранее были зафиксированы во время ошибки авторизации при вводе команды su.
+
+   ![4](image/4.png)
+
+## Изменение правил rsyslog.conf
+
+1. В первой вкладке терминала установите Apache, если он не был ранее инсталлирован:
+   `dnf -y install httpd`
+
+   ![5](image/5.png)
+
+2. После окончания процесса установки запустите веб-службу:
+   `systemctl start httpd`
+   `systemctl enable httpd`
+
+   ![6](image/6.png)
+
+3. Во второй вкладке терминала посмотрите журнал сообщений об ошибках веб-службы:
+   `tail -f /var/log/httpd/error_log`
+   Чтобы закрыть трассировку файла журнала, используйте Ctrl + c .
+
+   ![7](image/7.png)
+
+4. В третьей вкладке терминала получите полномочия администратора и в файле конфигурации /etc/httpd/conf/httpd.conf в конце добавьте следующую строку:
+   `ErrorLog syslog:local1`
+   Здесь local0 — local7 — это «настраиваемые» средства (объекты), которые syslog предоставляет пользователю для регистрации событий приложения в системном журнале.
+
+   ![8](image/8.png)
+
+5. В каталоге /etc/rsyslog.d создайте файл мониторинга событий веб-службы:
+   `cd /etc/rsyslog.d`
+   `touch httpd.conf`
+
+   ![9](image/9.png)
+
+   Открыв его на редактирование, пропишите в нём
+   `local1.\* -/var/log/httpd-error.log`
+   Эта строка позволит отправлять все сообщения, получаемые для объекта local1 (который теперь используется службой httpd), в файл /var/log/httpd-error.log.
+
+   ![10](image/10.png)
+
+6. Перейдите в первую вкладку терминала и перезагрузите конфигурацию rsyslogd
+   и веб-службу:
+   `systemctl restart rsyslog.service`
+   `systemctl restart httpd`
+   Все сообщения об ошибках веб-службы теперь будут записаны в файл /var/log/httpd-error.log, что можно наблюдать или в режиме реального времени, используя команду tail с соответствующими параметрами, или непосредственно просматривая указанный файл.
+
+   ![11](image/11.png)
+
+7. В третьей вкладке терминала создайте отдельный файл конфигурации для мониторинга отладочной информации:
+   `cd /etc/rsyslog.d`
+   `touch debug.conf`
+   В этом же терминале введите
+   `echo "\*.debug /var/log/messages-debug" > /etc/rsyslog.d/debug.conf`
+
+   ![12](image/12.png)
+
+8. В первой вкладке терминала снова перезапустите rsyslogd:
+   `systemctl restart rsyslog.service`
+
+   ![13](image/13.png)
+
+9. Во второй вкладке терминала запустите мониторинг отладочной информации:
+   `tail -f /var/log/messages-debug`
+
+   ![14](image/14.png)
+
+10. В третьей вкладке терминала введите:
+    `logger -p daemon.debug "Daemon Debug Message"`
+
+    ![15](image/15.png)
+
+11. В терминале с мониторингом посмотрите сообщение отладки. Чтобы закрыть трассировку файла журнала, используйте `Ctrl + c`.
+
+    ![16](image/16.png)
+
+## Использование journalctl
+
+1.  Во второй вкладке терминала посмотрите содержимое журнала с событиями с момента последнего запуска системы:
+    `journalctl`
+    Для пролистывания журнала используйте или `Enter` (построчный просмотр), или пробел (постраничный просмотр). Для выхода из просмотра используйте q.
+
+    ![17](image/17.png)
+
+2.  Просмотр содержимого журнала без использования пейджера:
+    `journalctl --no-pager`
+
+    ![18](image/18.png)
+
+3.  Режим просмотра журнала в реальном времени:
+    `journalctl -f`
+    Используйте Ctrl + c для прерывания просмотра.
+
+    ![19](image/19.png)
+
+4.  Для использования фильтрации просмотра конкретных параметров журнала введите
+    `journalctl` и дважды нажмите клавишу `Tab` .
+
+    ![20](image/20.png)
+
+5.  Просмотрите события для UID0:
+    `journalctl _UID=0`
+
+    ![21](image/21.png)
+
+6.  Для отображения последних 20 строк журнала введите
+    `journalctl -n 20`
+
+    ![22](image/22.png)
+
+7.  Для просмотра только сообщений об ошибках введите
+    `journalctl -p err`
+
+    ![23](image/23.png)
+
+8.  Если вы хотите просмотреть сообщения журнала, записанные за определённый период времени, вы можете использовать параметры `--since` и `--until`. Обе опции принимают параметр времени в формате `YYYY-MM-DD hh:mm:ss` Кроме того, вы можете использовать yesterday, today и tomorrow в качестве параметров.
+    Например, для просмотра всех сообщений со вчерашнего дня введите
+    `journalctl --since yesterday`
+
+    ![24](image/24.png)
+
+9.  Если вы хотите показать все сообщения с ошибкой приоритета, которые были зафиксированы со вчерашнего дня, то используйте
+    `journalctl --since yesterday -p err`
+
+    ![25](image/25.png)
+
+10. Если вам нужна детальная информация, то используйте
+    `journalctl -o verbose`
+
+    ![26](image/26.png)
+
+11. Для просмотра дополнительной информации о модуле sshd введите
+    `journalctl _SYSTEMD_UNIT=sshd.service`
+
+    ![27](image/27.png)
+
+## Постоянный журнал journald
+
+1. Запустите терминал и получите полномочия администратора.
+
+   ![28](image/28.png)
+
+2. Создайте каталог для хранения записей журнала: ([рис. @fig-002])
+   `mkdir -p /var/log/journal`
+
+3. Скорректируйте права доступа для каталога /var/log/journal, чтобы journald смог
+   записывать в него информацию: ([рис. @fig-002])
+   `chown root:systemd-journal /var/log/journal`
+   `chmod 2755 /var/log/journal`
+
+4. Для принятия изменений необходимо или перезагрузить систему (перезапустить службу systemd-journald недостаточно), или использовать команду: ([рис. @fig-002])
+   `killall -USR1 systemd-journald`
+
+   ![29](image/29.png){#fig-002}
+
+5. Журнал systemd теперь постоянный. Если вы хотите видеть сообщения журнала с момента последней перезагрузки, используйте:
+   `journalctl -b`
+
+   ![30](image/30.png)
 
 # Выводы
 
-Здесь кратко описываются итоги проделанной работы.
+Я получил навыки работы с журналами мониторинга различных событий в системе.
 
 # Список литературы{.unnumbered}
 
